# texture-metrics

./: pyproject.toml
src/texture_metrics/: constants.py  metrics.py  metrics_callback.py  transforms.py  utils.py
src/texture_metrics/criteria/: __init__.py  cnn.py  fourier.py  gradients.py  optimal_transport.py  slicing.py  style_distances.py
