[project]
authors = [{name = "Sélim Ollivier", email = "selim.ollivier@onera.fr"}]
dependencies = []
name = "texture-metrics"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
texture_metrics = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyyaml = ">=6.0.3,<7"
matplotlib = ">=3.10.7,<4"
